<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editText_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_weight"
        android:textSize="16dp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editText_daily_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_daily_activity"
        android:textSize="16dp"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="13dp"
            android:textSize="15dp"
            android:text="@string/textview_choose_gender"/>

        <CheckBox
            android:id="@+id/checkbox_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_male"
            android:textSize="15dp"
            android:layout_marginStart="16dp"/>

        <CheckBox
            android:id="@+id/checkbox_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_female"
            android:textSize="15dp"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate_goal"
        android:textSize="16dp"/>
</LinearLayout>
